--- a/styles.css
+++ b/styles.css
@@ -96,17 +96,6 @@ label {
   min-height: 6.79rem
 }
 
-.canvas-skills-title h1 {
-  font-size: clamp(2rem, 3rem, 4rem);
-  min-height: 3.59rem
-}
-
-.canvas-skills-title h2 {
-  font-size: clamp(1.8rem, 2.5rem, 4rem);
-  min-height: 3.2rem
-}
-
-
 h1,
 h2,
 h3 {
@@ -523,7 +512,8 @@ footer {
   max-width: 100vw;
   gap: 0;
   height: auto;
-  min-height: clamp(15rem, 22.3125rem, 35.9rem)
+  min-height: clamp(15rem, 22.3125rem, 35.9rem);
+  contain: layout paint;
 }
 
 .canvas-skills-img {
@@ -535,7 +525,7 @@ footer {
   max-width: 100vw;
   width: 100%;
   margin: 0 auto;
-  min-height: unset;
+  min-height: clamp(17rem, 50vh, 275px);
   object-fit: cover;
   aspect-ratio: 1.79/1;
 }
@@ -570,30 +560,30 @@ img[fetchpriority=high] {
   min-height: unset
 }
 
-.canvas-skills-title h1 {
+.canvas-skills-title h1,
+.canvas-skills-title h2 {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 0;
-  line-height: 1.2;
-  height: auto;
-  min-height: 3.56rem
-}
-
-.canvas-skills-title h2 {
-  font-size: clamp(1.2rem, 2rem, 4rem);
-  padding: .2em 0;
-  height: auto;
-  line-height: 1.2;
-  min-height: 3.18rem
-}
-
-.canvas-skills-title h1,
-.canvas-skills-title h2 {
   visibility: visible;
   opacity: 1;
   transition: opacity 0.3s ease-in;
+}
+
+.canvas-skills-title h1 {
+  padding: 0;
+  font-size: clamp(2rem, 3rem, 4rem);
+  min-height: 3.59rem;
+  line-height: 1.2;
+}
+
+.canvas-skills-title h2 {
+  font-size: clamp(1.8rem, 2.5rem, 4rem);
+  min-height: 3.2rem;
+  padding: .2em 0;
+  height: auto;
+  line-height: 1.2;
 }
 
 .about-me {
