--- a/styles.css
+++ b/styles.css
@@ -501,6 +501,7 @@ footer {
   max-width: 100vw;
   gap: 0;
   height: auto;
+  align-items: stretch;
 }
 
 .canvas-skills-img {
@@ -1105,15 +1106,6 @@ img[fetchpriority=high] {
   height: auto;
   aspect-ratio: 16/9;
   margin: 1.5em auto 0
-}
-
-.site-hero-img img {
-  width: 90%;
-  height: auto;
-  padding: 1%;
-  object-fit: cover;
-  aspect-ratio: inherit;
-  object-position: center
 }
 
 .hamburger-icon {
@@ -2081,6 +2073,7 @@ button.submit-button:hover {
     width: 100%;
     max-width: 100vw;
     height: auto;
+    align-items: stretch;
   }
 
   .canvas-skills-img {
@@ -2107,6 +2100,7 @@ button.submit-button:hover {
     height: auto;
     align-items: center;
     justify-content: space-between;
+    align-items: stretch;
   }
 
   .canvas-skills-img {
@@ -2186,6 +2180,7 @@ button.submit-button:hover {
     height: auto;
     align-items: center;
     justify-content: space-between;
+    align-items: stretch;
   }
 
   .canvas-skills-img {
@@ -2657,6 +2652,7 @@ button.submit-button:hover {
     height: auto;
     align-items: center;
     justify-content: center;
+    align-items: stretch;
   }
 
   .canvas-skills-img {
@@ -2701,7 +2697,7 @@ button.submit-button:hover {
   #projects {
     width: 90%;
     height: auto;
-    max-width: 90vw
+    max-width: 90vw;
   }
 
   .black-container {
