--- a/styles.css
+++ b/styles.css
@@ -496,13 +496,19 @@ footer {
 .canvas-skills-grid {
   display: grid;
   grid-template-columns: 2fr 3fr;
-  min-height: clamp(500px, 80vh, 1000px);
-  align-items: stretch;
+  min-height: clamp(14.31rem, 16.375, 34.25rem);
   width: 100%;
   max-width: 100vw;
   gap: 0;
   height: auto;
-  align-items: stretch;
+}
+
+.only-mobile {
+  display: block;
+}
+
+.not-mobile {
+  display: none;
 }
 
 .canvas-skills-img {
@@ -511,11 +517,10 @@ footer {
   border-left: 1em solid #000;
   border-right: .5em solid #000;
   height: 100%;
-  max-width: 100vw;
   width: 100%;
   margin: 0 auto;
   object-fit: cover;
-  aspect-ratio: 360 / 202;
+  aspect-ratio: 1.786 / 1;
 }
 
 .canvas-skills-img img {
@@ -523,6 +528,7 @@ footer {
   height: 100%;
   object-fit: cover;
   display: block;
+  aspect-ratio: inherit;
 }
 
 img[fetchpriority=high] {
@@ -1706,7 +1712,7 @@ button.submit-button:hover {
   width: 100%;
   height: auto;
   max-width: 100vw;
-  min-height: clamp(68rem, 92.63rem, 142rem);
+  overflow: hidden;
 }
 
 .author-bio,
@@ -2095,6 +2101,15 @@ button.submit-button:hover {
 }
 
 @media (max-width: 940px) {
+  .only-mobile {
+    display: none;
+  }
+
+  .not-mobile {
+    display: block;
+  }
+
+
   .canvas-skills-grid {
     grid-template-columns: 1fr;
     width: 100%;
@@ -2569,11 +2584,11 @@ button.submit-button:hover {
 
 @media (max-width:480px) {
   .about-me {
-    height: auto;
-    min-height: unset;
-    contain: layout;
-    overflow: hidden;
-    padding: 0.2em;
+    height: 100%;
+    width: 100%;
+    max-width: 100vw;
+    min-height: auto;
+    padding: 0.3em;
   }
 
   .design {
@@ -2587,18 +2602,34 @@ button.submit-button:hover {
     aspect-ratio: 63/124;
   }
 
+  h1,
+  h2 {
+    line-height: 1.6;
+    padding: 0.3em;
+  }
+
+  h3 {
+    line-height: 1.4;
+    padding: 0.2em;
+  }
+
+  p {
+    line-height: 1.4;
+  }
+
   .canvas-skills-grid {
     display: grid;
     grid-template-columns: 1fr;
     width: 100%;
     max-width: 480vw;
-    min-height: 43.75;
+    min-height: clamp(15rem, 20rem, 24rem);
     height: auto;
     overflow: hidden;
   }
 
   .canvas-skills-img {
     width: 100%;
+    max-width: 480vw;
     height: 100%;
     overflow: hidden;
     aspect-ratio: 1.786 / 1;
@@ -2615,8 +2646,17 @@ button.submit-button:hover {
   }
 
   .canvas-skills-title {
-    min-height: 7.5rem;
+    max-height: 100%;
+    min-height: 12.5rem;
+    height: auto;
+    padding: 0.5em;
   }
+
+  .canvas-skills-title h1,
+  .canvas-skills-title h2 {
+    padding: 0;
+  }
+
 
   .casestudy p {
     font-size: 1.4rem;
