--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -716,7 +716,7 @@ button.submit-button:hover {
     width: 100%;
     margin: 0 auto;
     object-fit: cover;
-    aspect-ratio: 1.786 / 1;
+    aspect-ratio: 186 / 85;
     flex: 3;
     overflow: hidden;
   }
@@ -793,11 +793,17 @@ button.submit-button:hover {
     display: block
   }
 
+  .canvas-skills-img {
+    aspect-ratio: 16 / 9186 / 85;
+  }
+
+  .canvas-skills-img img {
+    aspect-ratio: inherit;
+  }
+
   .nav-links {
     display: none
   }
-
-
 
   .button-grid {
     display: flex;
@@ -900,6 +906,7 @@ button.submit-button:hover {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    aspect-ratio: inherit;
   }
 
   .canvas-skills-grid {
@@ -915,6 +922,7 @@ button.submit-button:hover {
     width: 100%;
     overflow: hidden;
     background-color: #000;
+    aspect-ratio: 16 / 9;
   }
 
   .canvas-skills-title {
