--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -245,7 +245,7 @@ nav {
   max-width: 100vw;
   height: auto;
   align-items: stretch;
-  aspect-ratio: 5.35 / 1;
+  aspect-ratio: auto !important;
 }
 
 .canvas-skills-img {
@@ -253,12 +253,12 @@ nav {
   border-bottom: 1em solid #000;
   border-left: 1em solid #000;
   border-right: .5em solid #000;
-  height: auto;
+  height: 100%;
   width: 100%;
   margin: 0 auto;
   object-fit: cover;
-  aspect-ratio: 1.786 / 1;
-  flex: 1;
+  aspect-ratio: 571 / 318;
+  flex: 2;
   overflow: hidden;
 }
 
@@ -288,7 +288,7 @@ img[fetchpriority=high] {
   max-width: 100vw;
   width: 100%;
   margin: 0 auto;
-  flex: 2;
+  flex: 3;
   height: auto;
 }
 
@@ -717,7 +717,7 @@ button.submit-button:hover {
     width: 100%;
     margin: 0 auto;
     object-fit: cover;
-    aspect-ratio: 916 / 490;
+    aspect-ratio: 940 / 502;
     flex: 1;
     overflow: hidden;
   }
@@ -870,9 +870,17 @@ button.submit-button:hover {
     aspect-ratio: auto !important;
   }
 
+  .canvas-skills-img {
+    height: auto;
+    width: 100%;
+    max-width: 100vw;
+    aspect-ratio: 768 / 350;
+  }
+
   .footer-links ul li a {
     font-size: 1rem
   }
+
 
   footer {
     margin-top: 2em
