--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -933,7 +933,7 @@ button.submit-button:hover {
     max-width: 100vw;
     height: auto;
     align-items: stretch;
-    min-height: 41rem;
+    min-height: 30.18rem;
     aspect-ratio: auto !important;
   }
 
@@ -942,12 +942,28 @@ button.submit-button:hover {
     width: 100%;
     overflow: hidden;
     background-color: #000;
-    aspect-ratio: 656 / 350;
+    aspect-ratio: 656 / 335;
   }
 
   .canvas-skills-title {
     padding: 1rem;
     text-align: center;
+    min-height: auto;
+  }
+
+  .canvas-skills-title h1 {
+    min-height: 6rem;
+  }
+
+  .canvas-skills-title h2 {
+    min-height: 5.56rem;
+  }
+
+  .resume-summary {
+    min-height: auto;
+  }
+
+  .about-me {
     min-height: auto;
   }
 
@@ -1014,13 +1030,13 @@ button.submit-button:hover {
 
   .canvas-skills-title h1 {
     font-size: 2.5rem;
-    line-height: 1.4;
+    min-height: 3.5rem;
 
   }
 
   .canvas-skills-title h2 {
     font-size: 2rem;
-    line-height: 1.3;
+    min-height: 3rem;
   }
 
 }
