--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -40,9 +40,7 @@ body {
 body {
   display: flex;
   flex-direction: column;
-  height: auto;
   min-height: unset;
-  width: 100%;
   max-width: 100vw;
 }
 
@@ -121,10 +119,6 @@ body.fonts-loaded p {
   will-change: opacity;
 }
 
-
-
-
-
 .links,
 .links a,
 a,
@@ -190,7 +184,9 @@ p a:hover {
   color: #000
 }
 
-
+.background-color {
+  background-color: #000
+}
 
 nav {
   display: flex;
@@ -273,21 +269,23 @@ nav {
   border-bottom: 1em solid #000;
   border-left: 1em solid #000;
   border-right: .5em solid #000;
-  height: 100%;
   width: 100%;
+  max-width: 100vw;
+  height: auto;
+  min-height: auto;
   margin: 0 auto;
-  object-fit: cover;
-  aspect-ratio: 571 / 318;
+  padding: 0.01em;
   flex: 2;
   overflow: hidden;
 }
 
 .canvas-skills-img img {
+  display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  aspect-ratio: inherit;
-  display: block;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
 img[fetchpriority=high] {
@@ -433,6 +431,12 @@ footer {
   box-shadow: 0 .25em .5em rgba(0, 0, 0, .4), inset 0 0 .625em rgba(255, 255, 255, .1)
 }
 
+.main-container {
+  width: 100%;
+  max-width: 100vw;
+  height: auto;
+}
+
 .hamburger-icon {
   display: none
 }
@@ -564,6 +568,94 @@ footer {
   width: 100%;
   max-width: 100vw
 }
+
+.resume-border {
+  border: .3vh solid #fff;
+  width: 95%;
+  height: auto;
+  margin: 1em auto
+}
+
+.border-white {
+  border: 1em solid #fff;
+  margin: 30px auto;
+  width: 95%;
+  max-width: 100%;
+  height: auto;
+  padding: .9375em 0
+}
+
+#resume-border {
+  padding-bottom: 0
+}
+
+#description {
+  width: 100%;
+  max-width: 100vw;
+  height: auto;
+}
+
+
+.resume-date {
+  width: 90%;
+  height: auto;
+  min-height: 2rem;
+  margin: 0 auto;
+  max-width: 90%;
+  padding: 0
+}
+
+.resume-date h2 {
+  font-size: clamp(1.5rem, 2.5vw, 3rem);
+  color: #fff;
+  width: 100%;
+  height: auto;
+  color: #000;
+}
+
+.resume-summary {
+  width: 100%;
+  height: auto;
+  padding: 2em 1em;
+}
+
+.resume-summary a {
+  text-decoration: none;
+  color: #0ff;
+  height: auto;
+  width: 100%;
+  max-width: 100vw
+}
+
+.resume-summary h2 {
+  width: 100%;
+  height: auto;
+  padding-top: 4rem;
+  font-size: clamp(1rem, 1.2rem, 1.8rem);
+}
+
+.resume-summary h2,
+.resume-summary h3 {
+  color: #fff;
+  height: auto;
+  width: 100%;
+  max-width: 100vw;
+  padding: 1em 1em .5em
+}
+
+.resume-summary p {
+  color: #fff;
+  font-family: "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 250;
+  padding: 1.25em 3em;
+  font-size: clamp(1rem, 1.3rem, 1.8rem);
+  width: 100%;
+  height: auto;
+  max-width: 100vw;
+  padding: .2em
+}
+
+
 
 .takeme-text {
   width: 100%;
@@ -982,11 +1074,6 @@ button.submit-button:hover {
   .resume-summary {
     min-height: auto;
   }
-
-  .about-me {
-    min-height: auto;
-  }
-
 }
 
 @media (max-width:480px) {
