--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -3,7 +3,7 @@
     width: 52%;
     max-width: 52vw;
     position: relative;
-    padding: 10rem;
+    padding: 10rem 0 10rem;
     margin: 0 auto;
     height: auto;
     contain: layout;
@@ -51,6 +51,12 @@
     font-size: 1.8rem;
     width: 100%;
     height: auto;
+  }
+
+  .author-bio-text p i,
+  .author-bio-text p {
+    height: auto;
+    line-height: 1.34
   }
 
   .grade-text {
