--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -271,7 +271,7 @@ nav {
   border-right: .5em solid #000;
   width: 100%;
   max-width: 100vw;
-  height: auto;
+  height: 100%;
   min-height: auto;
   margin: 0 auto;
   padding: 0.01em;
@@ -748,6 +748,11 @@ button.submit-button:hover {
 }
 
 @media (max-width:1024px) {
+  #projects {
+    width: 60%;
+    max-width: 60vw;
+    padding: 5rem 0 5rem;
+  }
 
   .nav-links {
     display: none
@@ -806,6 +811,11 @@ button.submit-button:hover {
 }
 
 @media (max-width: 940px) {
+  #projects {
+    width: 75%;
+    max-width: 75vw;
+    padding: 5rem 0 5rem;
+  }
 
   .canvas-skills-grid {
     display: flex;
@@ -1077,6 +1087,12 @@ button.submit-button:hover {
 }
 
 @media (max-width:480px) {
+  #projects {
+    width: 90%;
+    max-width: 90vw;
+    padding: 2rem 0 2rem;
+  }
+
   .canvas-skills-grid {
     min-height: 16rem;
   }
@@ -1122,10 +1138,21 @@ button.submit-button:hover {
   }
 
   .canvas-skills-img {
+    aspect-ratio: 480 / 284;
+    height: 100%;
+    margin: 0 auto;
+    border: 0.5em solid black;
+    padding: 0.2em;
+  }
+
+  .canvas-skills-img img {
+    display: block;
     width: 100%;
-    max-width: 100vw;
-    height: auto;
-    aspect-ratio: 480/295;
+    height: 100%;
+    object-fit: cover;
+    box-sizing: border-box;
+    margin: 0 auto;
+    aspect-ratio: inherit;
   }
 
   .canvas-skills-title h1,
