--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -193,19 +193,6 @@
     overflow: hidden;
   }
 
-  .author-bio,
-  .cta-section,
-  .grade-img,
-  .article-global-container,
-  .pagespeed-grade-img,
-  .project-images {
-    width: 100%;
-    max-width: 1200px;
-    height: auto;
-    margin: 0 auto;
-    padding: 0
-  }
-
   .author-bio {
     background-color: #000;
     color: #0bd6e2;
@@ -221,6 +208,7 @@
     margin: 0 auto;
   }
 
+  .author-img-wrapper,
   .wireframe-img,
   .hubspot,
   .cute-robot,
@@ -238,6 +226,7 @@
     padding: 0.01em;
   }
 
+  .author-img-wrapper img,
   .wireframe-img img,
   .hubspot img,
   .cute-robot img,
@@ -254,6 +243,53 @@
     object-fit: cover;
     box-sizing: border-box;
     margin: 0 auto;
+    aspect-ratio: inherit;
+  }
+
+  .gradie-img {
+    aspect-ratio: 664 / 532;
+  }
+
+  #pagespeed-img-2,
+  #pagespeed-img-1 {
+    aspect-ratio: 633 / 641;
+  }
+
+  #pagespeed-img-3 {
+    aspect-ratio: 625 / 591;
+  }
+
+  #pagespeed-img-4 {
+    aspect-ratio: 625 / 518;
+  }
+
+  .hubspot {
+    aspect-ratio: 657 / 932;
+  }
+
+  .author-img-wrapper {
+    aspect-ratio: 664 / 289;
+  }
+
+  .mood-board {
+    aspect-ratio: 730 / 641;
+  }
+
+  .past-meets-future {
+    aspect-ratio: 730 / 840;
+  }
+
+  #wireframe-img-3,
+  #wireframe-img-1 {
+    aspect-ratio: 723 / 2194;
+  }
+
+  #wireframe-img-2 {
+    aspect-ratio: 723 / 1223;
+  }
+
+  .cute-robot {
+    aspect-ratio: 730 / 548;
   }
 
   .cta-section p {
@@ -594,14 +630,6 @@
 
 
   @media (max-width:480px) {
-    .about-me {
-      height: auto;
-      width: 100%;
-      max-width: 100vw;
-      min-height: auto;
-      padding: 0.3em;
-    }
-
     .design {
       contain: layout paint;
       height: auto;
@@ -612,7 +640,12 @@
       left: 1%;
       margin: 0 auto;
       width: 100%;
-      height: auto
+      height: auto;
+      line-height: 1.5;
+    }
+
+    .list-items ul li {
+      line-height: 1.5;
     }
 
     .takeme-text {
@@ -622,7 +655,10 @@
     #projects {
       width: 90%;
       height: auto;
+      min-height: auto;
+      contain: layout;
       max-width: 90vw;
+      padding: 0.1em;
     }
 
     .black-container {
@@ -644,5 +680,52 @@
     .resume-border {
       width: 100%;
       height: auto;
+    }
+
+
+    .gradie-img {
+      aspect-ratio: 370 / 297;
+    }
+
+    #pagespeed-img-2,
+    #pagespeed-img-1 {
+      aspect-ratio: 354 / 359;
+    }
+
+    #pagespeed-img-3 {
+      aspect-ratio: 346 / 327;
+    }
+
+    #pagespeed-img-4 {
+      aspect-ratio: 346 / 342;
+    }
+
+    .hubspot {
+      aspect-ratio: 362 / 514;
+    }
+
+    .author-img-wrapper {
+      aspect-ratio: 340 / 149;
+    }
+
+    .mood-board {
+      aspect-ratio: 403 / 367;
+    }
+
+    .past-meets-future {
+      aspect-ratio: 403 / 477;
+    }
+
+    #wireframe-img-3,
+    #wireframe-img-1 {
+      aspect-ratio: 396 / 1219;
+    }
+
+    #wireframe-img-2 {
+      aspect-ratio: 396 / 684;
+    }
+
+    .cute-robot {
+      aspect-ratio: 403 / 314;
     }
   }
