--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -277,6 +277,7 @@ nav {
   padding: 0.01em;
   flex: 2;
   overflow: hidden;
+  aspect-ratio: 480 / 293;
 }
 
 .canvas-skills-img img {
@@ -286,6 +287,7 @@ nav {
   object-fit: cover;
   box-sizing: border-box;
   margin: 0 auto;
+  aspect-ratio: inherit;
 }
 
 img[fetchpriority=high] {
@@ -344,7 +346,7 @@ img[fetchpriority=high] {
   width: 40vw;
   max-width: 40vw;
   padding: 2em 0;
-  aspect-ratio: 2.077/1
+  aspect-ratio: 2.077/1;
 }
 
 .footer-logo img {
@@ -1095,6 +1097,7 @@ button.submit-button:hover {
 
   .canvas-skills-grid {
     min-height: 16rem;
+    aspect-ratio: 480 / 483;
   }
 
   .side-nav {
@@ -1105,17 +1108,17 @@ button.submit-button:hover {
 
   h1,
   h2 {
-    line-height: 1.6;
+    line-height: 1.7;
     padding: 0.3em;
   }
 
   h3 {
-    line-height: 1.4;
+    line-height: 1.5;
     padding: 0.2em;
   }
 
   p {
-    line-height: 1.4;
+    line-height: 1.45;
   }
 
   .hamburger-icon {
@@ -1134,7 +1137,6 @@ button.submit-button:hover {
     max-width: 100vw;
     height: auto;
     min-height: 483px;
-    aspect-ratio: auto !important;
   }
 
   .canvas-skills-img {
@@ -1155,6 +1157,10 @@ button.submit-button:hover {
     aspect-ratio: inherit;
   }
 
+  .canvas-skills-title {
+    aspect-ratio: 368 / 110;
+  }
+
   .canvas-skills-title h1,
   .canvas-skills-title h2 {
     padding: 0;
@@ -1172,5 +1178,4 @@ button.submit-button:hover {
     font-size: 2rem;
     min-height: 3rem;
   }
-
 }
