--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -269,21 +269,24 @@ nav {
   border-bottom: 1em solid #000;
   border-left: 1em solid #000;
   border-right: .5em solid #000;
+  flex: 2;
+  overflow: hidden;
+  aspect-ratio: 595 / 363;
+}
+
+.canvas-skills-img {
   width: 100%;
   max-width: 100vw;
-  height: 100%;
+  height: auto;
   min-height: auto;
   margin: 0 auto;
   padding: 0.01em;
-  flex: 2;
-  overflow: hidden;
-  aspect-ratio: 480 / 293;
 }
 
 .canvas-skills-img img {
   display: block;
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
   box-sizing: border-box;
   margin: 0 auto;
@@ -750,11 +753,7 @@ button.submit-button:hover {
 }
 
 @media (max-width:1024px) {
-  #projects {
-    width: 60%;
-    max-width: 60vw;
-    padding: 5rem 0 5rem;
-  }
+
 
   .nav-links {
     display: none
@@ -813,12 +812,6 @@ button.submit-button:hover {
 }
 
 @media (max-width: 940px) {
-  #projects {
-    width: 75%;
-    max-width: 75vw;
-    padding: 5rem 0 5rem;
-  }
-
   .canvas-skills-grid {
     display: flex;
     flex-direction: column;
@@ -1029,13 +1022,6 @@ button.submit-button:hover {
     height: auto;
   }
 
-  .canvas-skills-img img {
-    object-fit: cover;
-    width: 100%;
-    height: auto;
-    aspect-ratio: inherit;
-  }
-
   .canvas-skills-grid {
     display: flex;
     flex-direction: column;
@@ -1043,30 +1029,43 @@ button.submit-button:hover {
     max-width: 100vw;
     height: auto;
     align-items: stretch;
-    min-height: 30.18rem;
+    min-height: 28rem;
     aspect-ratio: auto !important;
+    border: none;
   }
 
   .canvas-skills-img {
-    position: relative;
+    max-width: 680px;
     width: 100%;
-    overflow: hidden;
-    background-color: #000;
-    aspect-ratio: 656 / 335;
+    height: auto;
+    aspect-ratio: 680 / 364;
+    border-top: 1em solid black;
+  }
+
+  .canvas-skills-img img {
+    width: 100%;
+    height: auto;
+    aspect-ratio: inherit;
   }
 
   .canvas-skills-title {
     padding: 1rem;
     text-align: center;
     min-height: auto;
+    height: auto;
+    margin: 0 auto;
+    border: 1em solid black;
+    border-bottom: 2em solid black;
   }
 
   .canvas-skills-title h1 {
     min-height: 6rem;
+    min-height: 1.6;
   }
 
   .canvas-skills-title h2 {
     min-height: 5.56rem;
+    line-height: 1.5;
   }
 
   .resume-summary {
@@ -1075,11 +1074,6 @@ button.submit-button:hover {
 }
 
 @media (max-width:480px) {
-  #projects {
-    width: 90%;
-    max-width: 90vw;
-    padding: 2rem 0 2rem;
-  }
 
   .canvas-skills-grid {
     min-height: 16rem;
@@ -1122,29 +1116,13 @@ button.submit-button:hover {
     width: 100%;
     max-width: 100vw;
     height: auto;
-    min-height: 483px;
-  }
-
-  .canvas-skills-img {
-    aspect-ratio: 480 / 284;
-    height: 100%;
-    margin: 0 auto;
-    border: 0.5em solid black;
-    padding: 0.2em;
-  }
-
-  .canvas-skills-img img {
-    display: block;
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    box-sizing: border-box;
-    margin: 0 auto;
-    aspect-ratio: inherit;
+    max-height: 480px;
+    min-height: 29rem;
   }
 
   .canvas-skills-title {
-    aspect-ratio: 368 / 110;
+    height: auto;
+    min-height: 11.62rem;
   }
 
   .canvas-skills-title h1,
