--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -193,6 +193,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  height: auto;
   max-width: 100vw;
   background-color: #000
 }
@@ -208,6 +209,7 @@ nav {
   display: flex;
   gap: 2vw;
   list-style-type: none;
+  height: auto;
 }
 
 .nav-links ul li {
@@ -220,7 +222,8 @@ nav {
   font-size: clamp(1rem, 1.2vw, 1.25rem);
   color: #fff;
   width: 100%;
-  height: auto
+  height: auto;
+  line-height: 1.1;
 }
 
 .nav-logo {
@@ -271,7 +274,7 @@ nav {
   border-right: .5em solid #000;
   flex: 2;
   overflow: hidden;
-  aspect-ratio: 595 / 363;
+  aspect-ratio: auto !important;
 }
 
 .canvas-skills-img {
